# claimback

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml
claimback/: api.py  cli.py  config.py  dashboard.py  db.py  detect.py  ingest.py  models.py  outcomes.py  valuation.py
claimback.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
claimback/agent/: orchestrator.py
claimback/couriers/: __init__.py  base.py  demo.py  evri.py
claimback/xero/: __init__.py  auth.py  client.py  matching.py
data/: demo_outcomes.csv  demo_shipments.csv
scripts/: seed_payouts.py  seed_xero.py
tests/: conftest.py  test_api.py  test_claim_pack.py  test_detect.py  test_e2e_sim.py  test_outcomes.py  test_state_machine.py
tests/fixtures/: evri_golden.csv  swiftship_golden.csv
