[project]
name = "claimback"
version = "0.1.0"
description = "Autonomous courier-claims recovery agent for small businesses, powered by Xero"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "tenacity>=8.2",
    "sqlalchemy>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov"]
api = ["fastapi>=0.111", "uvicorn>=0.29"]

[project.scripts]
claimback = "claimback.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["claimback*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
